--- a/config.env
+++ b/config.env
@@ -4,3 +4,4 @@ APP_PORT = 300
 DATABASE = mongodb://lobenhebbadj:szCitKhqB1dOGQ8S@ac-bybljuy-shard-00-00.8dxzgrz.mongodb.net:27017,ac-bybljuy-shard-00-01.8dxzgrz.mongodb.net:27017,ac-bybljuy-shard-00-02.8dxzgrz.mongodb.net:27017/?ssl=true&replicaSet=atlas-108jwz-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD = szCitKhqB1dOGQ8S
 USERNAME = lobenhebbadj
+JWT_SECRET = my-first-jwt-secret
